Closed Bug 541297 Opened 15 years ago Closed 15 years ago

"ABORT: Got a regular sample during startup state, expected an end sample instead" with svg:animate

Categories

(Core :: SVG, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: birtles)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

This testcase triggers: ###!!! ABORT: Got a regular sample during startup state, expected an end sample instead: 'mElementState != STATE_STARTUP || aEndOnly', file /Users/jruderman/mozilla-central/content/smil/nsSMILTimedElement.cpp, line 376 Other variants trigger: ###!!! ABORT: Negative sample time for active animation: 'mSampleTime >= 0 || !mIsActive', file /Users/jruderman/mozilla-central/content/smil/nsSMILAnimationFunction.cpp, line 255
I'm not expecting to start working again until 17 May but unless someone wants to look at this before then I'll take this.
Assignee: nobody → birtles
Status: NEW → ASSIGNED
Attached patch patch v1aSplinter Review
Proposed fix for this bug. I've included the original test case as a crash test. Is this correct? Since it's not so much as crash test as an abort test?
Attachment #447002 - Flags: review?
Attachment #447002 - Flags: review? → review?(roc)
OS: Mac OS X → All
Hardware: x86 → All
(In reply to comment #2) > I've included the original test case as a crash test. Is this correct? Yes, that's correct -- crashtests are the simplest way to regression-test an NS_ABORT_IF_FALSE failure right now. (The same goes for assertion failures, I think, especially now that bug 472557 has landed.)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: