Bug 541297 - SVG SMIL: Fix abort on sampling re-attached animation node, r=roc